--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
+          <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.6</version>
         </dependency>
 
         <dependency>
@@ -99,6 +108,85 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.bcel/bcel -->
+<dependency>
+    <groupId>org.apache.bcel</groupId>
+    <artifactId>bcel</artifactId>
+    <version>6.0</version>
+</dependency>
+  
+  <!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
+<dependency>
+    <groupId>jaxen</groupId>
+    <artifactId>jaxen</artifactId>
+    <version>1.1.6</version>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-debug-all -->
+<dependency>
+    <groupId>org.ow2.asm</groupId>
+    <artifactId>asm-debug-all</artifactId>
+    <version>5.0.2</version>
+</dependency>
+ <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
+<dependency>
+    <groupId>com.google.code.findbugs</groupId>
+    <artifactId>jsr305</artifactId>
+    <version>2.0.1</version>
+</dependency>
+ <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jFormatString -->
+<dependency>
+    <groupId>com.google.code.findbugs</groupId>
+    <artifactId>jFormatString</artifactId>
+    <version>2.0.1</version>
+</dependency>
+ 
+         
+        <dependency>
+    <groupId>org.apache.tomcat.embed</groupId>
+    <artifactId>tomcat-embed-jasper</artifactId>
+    <version>8.0.36</version>
+    </dependency>
+    <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+    </dependency>
+       <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+      </dependency>
+      
+    <dependency>
+    <groupId>javax.ws.rs</groupId>
+    <artifactId>javax.ws.rs-api</artifactId>
+    <version>2.0.1</version>
+    </dependency>
+
+    <dependency>
+    <groupId>org.glassfish.jersey.core</groupId>
+    <artifactId>jersey-common</artifactId>
+    <version>2.26</version>
+    </dependency>
+    
+    <dependency>
+    <groupId>com.fasterxml.uuid</groupId>
+    <artifactId>java-uuid-generator</artifactId>
+    <version>3.1.4</version>
+</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jaxrs -->
+    <!-- <dependency>
+    <groupId>org.jboss.resteasy</groupId>
+    <artifactId>resteasy-jaxrs</artifactId>
+    <version>2.3.1.GA</version>
+    </dependency>
+     <dependency>
+		<groupId>org.jboss.resteasy</groupId>
+		<artifactId>resteasy-jaxb-provider</artifactId>
+		<version>2.3.1.GA</version>
+	</dependency>	 -->
+      
     </dependencies>
 
     <build>
@@ -164,14 +252,6 @@
                         <configuration>
                             <excludeFilterFile>${basedir}/etc/findbugs-exclude-filter.xml</excludeFilterFile>
                         </configuration>
-                        <executions>
-                            <execution>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
