--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,31 @@
+server.port=8089
+#spring.mvc.view.prefix=/WEB-INF/
+#spring.mvc.view.suffix=.jsp
+
 spring.jackson.serialization.INDENT_OUTPUT=true
-
 spring.h2.console.enabled=true
-
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/test_new?createDatabaseIfNotExist=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 jwt.header=Authorization
 jwt.secret=mySecret
 jwt.expiration=604800
 jwt.route.authentication.path=/auth
+jwt.route.registration.path=/registration
+jwt.route.userupdate.path=/user/update/{name}
+jwt.route.userdelete.path=/user/delete/{name}
+jwt.route.userrole.path=/user/role/create
+jwt.route.facilitysetup.path=/specialitymaster
+jwt.route.patientregistration.path=/patient/registration 
 jwt.route.authentication.refresh=/refresh
